# sirdns

./: .gitignore  LICENSE  Main.hs  Parser.hs  README.org  Test.hs  Types.hs  dns-rc.cabal  example-answer.txt  root-servers.txt  shell.nix  sirdns.cabal
src/: Parser.hs  Types.hs
