cabal-version:       >=1.10
name:                dns-rc
version:             0.1.0.0
synopsis:            Recursive dns server for hackathon
license-file:        LICENSE
author:              'Lauren Arnett, Joseph Morag'
maintainer:          jm@josephmorag.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable dns-rc
  main-is:             Main.hs
  other-modules:       Types
  build-depends:       base >=4.13 && <4.14,
                       bytestring,
                       rio,
                       conduit,
                       conduit-extra,
                       lens,
                       network
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DerivingStrategies
                     , DerivingVia
                     , DoAndIfThenElse
                     , DuplicateRecordFields
                     , EmptyCase
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedLabels
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , PatternGuards
                     , PatternSynonyms
                     , PolyKinds
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , ViewPatterns
  default-language:    Haskell2010
