cabal-version:       3.0
name:                dns-rc
version:             0.1.0.0
synopsis:            Recursive dns server for hackathon
license-file:        LICENSE
author:              'Lauren Arnett, Joseph Morag'
maintainer:          jm@josephmorag.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

common shared
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DerivingStrategies
                     , DerivingVia
                     , DoAndIfThenElse
                     , DuplicateRecordFields
                     , EmptyCase
                     , EmptyDataDecls
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedLabels
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , PatternGuards
                     , PatternSynonyms
                     , PolyKinds
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , ViewPatterns
  default-language:    Haskell2010
  build-depends:       base >=4.13 && <4.14,
                       bitvec,
                       bytestring,
                       iproute,
                       lens,
                       mtl,
                       network,
                       pretty-simple,
                       rio
library
  import: shared
  exposed-modules: Types, Parser
  hs-source-dirs:  src

executable dns-rc
  import: shared
  main-is:             Main.hs
  build-depends:       dns-rc

test-suite test
  import: shared
  main-is: Test.hs
  type: exitcode-stdio-1.0
  build-depends: dns-rc,
                 hedgehog,
                 tasty,
                 tasty-hedgehog

