cabal-version:      3.0
name:               sirdns
version:            0.1.0.0
synopsis:           sirdns is (a) recursive domain name server
license-file:       LICENSE
author:             'Lauren Arnett, Joseph Morag'
maintainer:         jm@josephmorag.com
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

common shared
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010
  build-depends:
    , base               ^>=4.13
    , bitvec
    , bytestring
    , containers
    , data-default
    , errors
    , iproute
    , lens
    , mtl
    , network
    , pretty-simple
    , rio
    , search-algorithms

library
  import:          shared
  exposed-modules:
    Parser
    Types

  hs-source-dirs:  src

executable sirdns
  import:        shared
  main-is:       Main.hs
  build-depends: sirdns

test-suite test
  import:        shared
  main-is:       Test.hs
  type:          exitcode-stdio-1.0
  build-depends:
    , hedgehog
    , sirdns
